--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "solc": "0.6.6",
+    "@uniswap/lib": "^1.1.2",
+    "@uniswap/sdk": "^2.0.5",
+    "@uniswap/v2-core": "^1.0.1",
+    "bignumber.js": "9.0.0",
     "etherlime": "2.3.3",
     "etherlime-lib": "1.2.3",
-    "bignumber.js": "9.0.0",
     "ethers": "4.0.47",
-    "openzeppelin-solidity": "3.0.1"
+    "openzeppelin-solidity": "3.0.1",
+    "solc": "0.6.6"
   },
   "scripts": {
     "build": "etherlime compile",
