Uniswap addLiquidity integrated
Finally got the uniswap contracts mocked (gave up on mocking the whole infrastructure, it was on like 5 different sol versions. Made a mock that did the basics and moved on. 
Next up is figuring out why its not calling the transition contract correctly (see console logs in tests, wtf is not emited when it very much should be).

--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "etherlime-lib": "1.2.3",
     "ethers": "4.0.47",
     "openzeppelin-solidity": "3.0.1",
-    "solc": "0.6.6"
+	"solc": "0.6.6",
+	"remixd": "0.8.1-alpha.16"
   },
   "scripts": {
     "build": "etherlime compile",
     "test": "etherlime test --output=none --timeout 100000 --gas-report=true",
-    "start": "etherlime ganache -q --networkId=1337",
-    "retest": "remixd"
+	"start": "etherlime ganache -q --networkId=1337",
+	"remixd": "remixd -s ./contracts --remix-ide https://remix.ethereum.org"
   }
 }
