--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "etherlime compile",
     "test": "etherlime test --output=none --timeout 100000 --gas-report=true",
     "start": "etherlime ganache -q --networkId=1337",
-    "remixd": "remixd -s ./contracts --remix-ide https://remix.ethereum.org"
+    "remixd": "remixd -s ./contracts --remix-ide https://remix.ethereum.org",
+    "flat": "etherlime flatten BondingCurveFactory.sol"
   }
 }
